--- a/AndroidCustomComponents/src/main/res/layout/popup_item.xml
+++ b/AndroidCustomComponents/src/main/res/layout/popup_item.xml
@@ -12,6 +12,7 @@
         android:layout_margin="15dp"
         android:background="@drawable/corner_radius"
         android:textSize="16sp"
+        android:textColor="#000000"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:background="@drawable/corner_radius"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
+        android:textColor="#000000"
         android:background="@drawable/corner_radius"
         android:textSize="17sp"
         android:gravity="center"
